--- a/index.html
+++ b/index.html
@@ -3,12 +3,104 @@
 <head>
     <meta charset="utf-8">
     <title>HalfWit Coffee Roasters</title>
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto+Slab' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 
-<!-- Put your code here -->
+<header>
+    <h1>Smart coffee, halfwitted roasters.</h1>
+    <blockquote class="fourcol">It's one of my favorite coffee roasters in Chicago.<br>
+— PJ Macklin, Coffee Enthusiast</blockquote>
+</header>
+
+<div class="container">
+
+    <p class="twocol">HalfWit Coffee Roasters are a team of seasoned Chicago coffee professionals dedicated to providing the highest caliber coffee with the least amount of pretense. We want you to know that we aim to be savvy about what we do. We want you to feel comfortable asking questions. Most of all, we want you to have fun and let us worry about making your coffee taste good.</p>
+
+    <p class="twocol">It’s sourced well, from importers who are dedicated to promoting sustainable relationships between farmers and roasters. It’s roasted intelligently, utilizing a perfect blend of science and magic, to elevate the unique flavors of each bean. And, it’s designed to be tasty to both coffee nerds and happily addicted novices.</p>
+
+    <div class="twocol coffee">
+        <img src="/images/cascara.png" alt="">
+        <h2>Cascara</h2>
+        <h3>Sabanilla de Alajuela, Costa Rica</h3>
+    </div>
+
+    <div class="twocol coffee">
+        <img src="/images/moonbat.png" alt="">
+        <h2>Moonbat</h2>
+        <h3>Guatemala, Chimaltenango; Mexico, Coatepec; Papua New Guinea, Nebilyer Valley</h3>
+    </div>
+
+    <div class="twocol coffee">
+        <img src="/images/costa-rica.png" alt="">
+        <h2>Costa Rica</h2>
+        <h3>La Violeta, San Cristobal Sur, Tarrazu</h3>
+    </div>
+
+    <div class="twocol coffee">
+        <img src="/images/kenya.png" alt="">
+        <h2>Kenya</h2>
+        <h3>Meru County</h3>
+    </div>
+
+    <div class="twocol coffee">
+        <img src="/images/ethiopia.png" alt="">
+        <h2>Ethiopia</h2>
+        <h3>Borena Zone, Kochere Woreda, Yirgacheffe</h3>
+    </div>
+
+    <div class="twocol coffee">
+        <img src="/images/nicaragua.png" alt="">
+        <h2>Nicaragua</h2>
+        <h3>Dipilto, Nueva Segovia</h3>
+    </div>
+
+    <div class="twocol coffee">
+        <img src="/images/brazil.png" alt="">
+        <h2>Brazil</h2>
+        <h3>Mogiana, São Sebastião de Grama</h3>
+    </div>
+
+    <div class="twocol coffee">
+        <img src="/images/triforce.png" alt="">
+        <h2>Triforce</h2>
+        <h3>Guatemala: Antigua, Sacatepequez // Ethiopia: Borena zone, Oromia region</h3>
+    </div>
+
+</div>
+
+<footer>
+    <div class="fourcol">
+        <h2>Some other coffee we like:</h2>
+        <h3>If you can't find ours, you might as well settle for second best!</h3>
+
+        <div class="altcoffee onecol">
+            <a href="#">La Colombe</a><br>
+            1552 N Damen Ave.<br>
+            Chicago, IL<br>
+        </div>
+
+        <div class="altcoffee onecol">
+            <a href="#">Bow Truss</a><br>
+            406 N Wells St.<br>
+            Chicago, IL<br>
+        </div>
+
+        <div class="altcoffee onecol">
+            <a href="#">Metropolis</a><br>
+            1039 W Granville Ave.<br>
+            Chicago, IL<br>
+        </div>
+
+        <div class="altcoffee onecol">
+            <a href="#">Caffe Streets</a><br>
+            1750 W Division St.<br>
+            Chicago, IL<br>
+        </div>
+    </div>
+</footer>
 
 </body>
 </html>
