link updates and drop cap

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 <div class="container">
 
-    <p class="twocol">HalfWit Coffee Roasters are a team of seasoned Chicago coffee professionals dedicated to providing the highest caliber coffee with the least amount of pretense. We want you to know that we aim to be savvy about what we do. We want you to feel comfortable asking questions. Most of all, we want you to have fun and let us worry about making your coffee taste good.</p>
+    <p class="twocolp">HalfWit Coffee Roasters are a team of seasoned Chicago coffee professionals dedicated to providing the highest caliber coffee with the least amount of pretense. We want you to know that we aim to be savvy about what we do. We want you to feel comfortable asking questions. Most of all, we want you to have fun and let us worry about making your coffee taste good.</p>
 
-    <p class="twocol">It’s sourced well, from importers who are dedicated to promoting sustainable relationships between farmers and roasters. It’s roasted intelligently, utilizing a perfect blend of science and magic, to elevate the unique flavors of each bean. And, it’s designed to be tasty to both coffee nerds and happily addicted novices.</p>
+    <p class="twocolp">It’s sourced well, from importers who are dedicated to promoting sustainable relationships between farmers and roasters. It’s roasted intelligently, utilizing a perfect blend of science and magic, to elevate the unique flavors of each bean. And, it’s designed to be tasty to both coffee nerds and happily addicted novices.</p>
 
     <div class="twocol coffee">
         <img src="/images/cascara.png" alt="">
@@ -77,25 +77,25 @@
         <h3>If you can't find ours, you might as well settle for second best!</h3>
 
         <div class="altcoffee onecol">
-            <a href="#">La Colombe</a><br>
+            <a href="http://www.lacolombe.com/" target="_blank">La Colombe</a><br>
             1552 N Damen Ave.<br>
             Chicago, IL<br>
         </div>
 
         <div class="altcoffee onecol">
-            <a href="#">Bow Truss</a><br>
+            <a href="http://bowtruss.com/" target="_blank">Bow Truss</a><br>
             406 N Wells St.<br>
             Chicago, IL<br>
         </div>
 
         <div class="altcoffee onecol">
-            <a href="#">Metropolis</a><br>
+            <a href="https://www.metropoliscoffee.com/" target="_blank">Metropolis</a><br>
             1039 W Granville Ave.<br>
             Chicago, IL<br>
         </div>
 
         <div class="altcoffee onecol">
-            <a href="#">Caffe Streets</a><br>
+            <a href="http://caffestreets.com/" target="_blank">Caffe Streets</a><br>
             1750 W Division St.<br>
             Chicago, IL<br>
         </div>
